updated TDP pages and READMEs

--- a/tdp/mtc/index.html
+++ b/tdp/mtc/index.html
@@ -11,10 +11,10 @@
   <link rel="stylesheet" href="https://smstestbed.nist.gov/css/nist_header.css">
   <script type="text/javascript"
   src="https://smstestbed.nist.gov/js/jquery-1.9.0.min.js">
-  </script>
+ </script>
   <script type="text/javascript"
   src="https://smstestbed.nist.gov/js/nist-header.js">
-  </script>
+ </script>
 </head>
 
 <body lang="en" class="CS_Document">
@@ -37,7 +37,7 @@ method="get">
   name="affiliate" value="nist-search" type="hidden"><label
   class="element-invisible" for="query">Search</label><input
   class="usagov-search-autocomplete" id="query" name="query" size="15"
-  maxlength="128" type="text"><span class="ui-helper-hidden-accessible"></span>
+  maxlength="128" type="text"><span class="ui-helper-hidden-accessible"></span> 
   <input id="edit-submit" name="commit" value="Search" class="form-submit"
   type="submit"><button type="submit" id="edit-submit-btn" name="op"
   class="form-submit"><span class="element-invisible">Search</span><i
@@ -58,13 +58,13 @@ NIST Menu</a></div>
   <li class="nist-menu__item nist-menu__item--depth-1"><a
     href="https://www.nist.gov/topics" class="nist-menu__link">Topics<span
     class="expander fa fa-minus"><span class="element-invisible">Expand or
-    Collapse</span></span></a>
+    Collapse</span></span></a> 
 
     <div class="nist-menu__submenu">
     <ul class="nist-menu">
 
       <div class="nist-menu__column-container has-three-columns">
-      <span tabindex="0" class="nist-menu__close">Close</span>
+      <span tabindex="0" class="nist-menu__close">Close</span> 
 
       <div class="nist-menu__column">
       <ul>
@@ -161,19 +161,19 @@ NIST Menu</a></div>
     href="https://www.nist.gov/labs-major-programs"
     class="nist-menu__link">Labs &amp; Major Programs<span
     class="expander fa fa-minus"><span class="element-invisible">Expand or
-    Collapse</span></span></a>
+    Collapse</span></span></a> 
 
     <div class="nist-menu__submenu">
     <ul class="nist-menu">
 
       <div class="nist-menu__column-container has-three-columns">
-      <span tabindex="0" class="nist-menu__close">Close</span>
+      <span tabindex="0" class="nist-menu__close">Close</span> 
 
       <div class="nist-menu__column">
       <ul>
         <li class="nist-menu__item nist-menu__item--depth-2"><a
           href="https://www.nist.gov/labs-major-programs/laboratories"
-          class="nist-menu__link">Laboratories</a>
+          class="nist-menu__link">Laboratories</a> 
           <ul class="nist-menu">
             <li class="nist-menu__item nist-menu__item--depth-3"><a
               href="https://www.nist.gov/ctl"
@@ -200,7 +200,7 @@ NIST Menu</a></div>
       <ul>
         <li class="nist-menu__item nist-menu__item--depth-2"><a
           href="https://www.nist.gov/laboratories/user-facilities"
-          class="nist-menu__link">User Facilities</a>
+          class="nist-menu__link">User Facilities</a> 
           <ul class="nist-menu">
             <li class="nist-menu__item nist-menu__item--depth-3"><a
               href="https://www.nist.gov/cnst" class="nist-menu__link">Center
@@ -226,7 +226,7 @@ NIST Menu</a></div>
       <ul>
         <li class="nist-menu__item nist-menu__item--depth-2"><a
           href="https://www.nist.gov/labs-major-programs/major-programs"
-          class="nist-menu__link">Major Programs</a>
+          class="nist-menu__link">Major Programs</a> 
           <ul class="nist-menu">
             <li class="nist-menu__item nist-menu__item--depth-3"><a
               href="https://www.nist.gov/advanced-manufacturing-office"
@@ -254,19 +254,19 @@ NIST Menu</a></div>
     href="https://www.nist.gov/services-resources"
     class="nist-menu__link">Services &amp; Resources<span
     class="expander fa fa-minus"><span class="element-invisible">Expand or
-    Collapse</span></span></a>
+    Collapse</span></span></a> 
 
     <div class="nist-menu__submenu">
     <ul class="nist-menu">
 
       <div class="nist-menu__column-container has-two-columns">
-      <span tabindex="0" class="nist-menu__close">Close</span>
+      <span tabindex="0" class="nist-menu__close">Close</span> 
 
       <div class="nist-menu__column">
       <ul>
         <li class="nist-menu__item nist-menu__item--depth-2"><a
           href="https://www.nist.gov/services-resources/standards-and-measurements"
-          class="nist-menu__link">Standards and Measurements</a>
+          class="nist-menu__link">Standards and Measurements</a> 
           <ul class="nist-menu">
             <li class="nist-menu__item nist-menu__item--depth-3"><a
               href="https://www.nist.gov/calibrations"
@@ -300,7 +300,7 @@ NIST Menu</a></div>
       <div class="nist-menu__column">
       <ul>
         <li class="nist-menu__item nist-menu__item--depth-2"><a
-          href="https://www.nist.gov/data" class="nist-menu__link">Data</a>
+          href="https://www.nist.gov/data" class="nist-menu__link">Data</a> 
           <ul class="nist-menu">
             <li class="nist-menu__item nist-menu__item--depth-3"><a
               href="http://webbook.nist.gov/chemistry/"
@@ -334,13 +334,13 @@ NIST Menu</a></div>
   <li class="nist-menu__item nist-menu__item--depth-1"><a
     href="https://www.nist.gov/news-events" class="nist-menu__link">News &amp;
     Events<span class="expander fa fa-minus"><span
-    class="element-invisible">Expand or Collapse</span></span></a>
+    class="element-invisible">Expand or Collapse</span></span></a> 
 
     <div class="nist-menu__submenu has-one-column">
     <ul class="nist-menu">
 
       <div class="nist-menu__column-container has-one-column">
-      <span tabindex="0" class="nist-menu__close">Close</span>
+      <span tabindex="0" class="nist-menu__close">Close</span> 
 
       <div class="nist-menu__column">
       <ul>
@@ -368,13 +368,13 @@ NIST Menu</a></div>
   <li class="nist-menu__item nist-menu__item--depth-1"><a
     href="https://www.nist.gov/about-nist" class="nist-menu__link">About
     NIST<span class="expander fa fa-minus"><span
-    class="element-invisible">Expand or Collapse</span></span></a>
+    class="element-invisible">Expand or Collapse</span></span></a> 
 
     <div class="nist-menu__submenu">
     <ul class="nist-menu">
 
       <div class="nist-menu__column-container has-two-columns">
-      <span tabindex="0" class="nist-menu__close">Close</span>
+      <span tabindex="0" class="nist-menu__close">Close</span> 
 
       <div class="nist-menu__column">
       <ul>
@@ -386,7 +386,7 @@ NIST Menu</a></div>
           class="nist-menu__link">Visit</a></li>
         <li class="nist-menu__item nist-menu__item--depth-2"><a
           href="https://www.nist.gov/about-nist/our-organization"
-          class="nist-menu__link">Our Organization</a>
+          class="nist-menu__link">Our Organization</a> 
           <ul class="nist-menu">
             <li class="nist-menu__item nist-menu__item--depth-3"><a
               href="https://www.nist.gov/about-nist/our-organization/mission-vision-values"
@@ -424,7 +424,7 @@ NIST Menu</a></div>
           class="nist-menu__link">Funding Opportunities</a></li>
         <li class="nist-menu__item nist-menu__item--depth-2"><a
           href="https://www.nist.gov/timeline"
-          class="nist-menu__link">History</a>
+          class="nist-menu__link">History</a> 
           <ul class="nist-menu">
             <li class="nist-menu__item nist-menu__item--depth-3"><a
               href="http://nistdigitalarchives.contentdm.oclc.org/"
@@ -446,34 +446,95 @@ NIST Menu</a></div>
 </div>
 </header>
 <div id="tdp content" style="padding: 0px 30px 30px 30px;">
-<h1>NIST SMS Test Bed: Technical Data Packages</h1>
+<h1><a
+id="Design_Manufacturing_and_Inspection_Data_for_a_Box_Assembly_0"></a>Design,
+Manufacturing, and Inspection Data for a Box Assembly</h1>
 
-<p>This section contains Technical Data Packages (TDPs) generated in the SMS
-Test Bed. Please visit the <a href="https://smstestbed.nist.gov/">SMS Test Bed
-Information Page</a> for more information on the test bed. More information on
-TDPs coming soon.</p>
+<p>To better understand and address the challenges faced in linking all stages
+of a manufacturing and design process, an investigative fabrication process was
+designed and enacted as part of a collaboration between <a
+href="https://www.nist.gov">National Institute of Standards and Technology
+(NIST)</a> and <a href="http://www.the-mtc.org/">Manufacturing Technology
+Centre (MTC)</a>. This collaboration sought to test selected open standards'
+ability to integrate the product-lifecycle stages of engineering design,
+manufacturing, and quality assurance through a thorough implementation of a
+small scale model-based enterprise (MBE). This dataset was generated as a
+result of the collaboration.</p>
 
-<h2>TDPs Repository Description</h2>
+<p><a href="./mtc.zip">Download the full package @ 237 MB.</a></p>
 
-<p>Below is an overview with links to the TDPs available in this repository.</p>
-<pre style="font-family: 'courier new', courier, monospace; font-size: 1em;">    +---<a href="https://smstestbed.nist.gov/tdp/d2mi/">d2mi (Design to Manufacturing and Inspection project)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/CAD/">CAD (Computer-aided design files)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/CAM/">CAM (Computer-aided manufacturing files)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/G-code/">G-code (ISO 6983 G-code related to the CAM and Setup Sheets)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/Setup%20Sheets/">Setup Sheets (Setup Sheets related to the CAM and G-code)</a>
-    +---<a href="https://smstestbed.nist.gov/tdp/mtc/">mtc (NIST and The Manufacturing Technology Centre Collaboration project)</a>
-    +---<a href="https://smstestbed.nist.gov/tdp/README.md">README.md (this documentation as a markdown document)</a></pre>
+<h2><a id="Directory_Structure_3"></a>Directory Structure</h2>
+<ul>
+  <li><a href="./Cad">CAD</a> 
+    <ul>
+      <li>Digital Product Definition, in accordance to ASME Y14.41-2012,
+        created using SolidWorks 2016</li>
+    </ul>
+  </li>
+  <li><a href="./Clean">Clean</a> 
+    <ul>
+      <li>Raw output from machine tool adapters with white-space and recording
+        errors cleaned</li>
+      <li>Pipe delimited in accordance with the MTConnect standard v1.3</li>
+    </ul>
+  </li>
+  <li><a href="./FAIR">FAIR</a> 
+    <ul>
+      <li>First article inspection reporting data in QIF 2.1 format</li>
+      <li>Data conforms to <a
+        href="http://qifstandards.org/latest-qif-version/">QIF XSD</a></li>
+      <li>Each file contains data for 20 instances of the same part</li>
+      <li>NIST / Mitutoyo completed inspection</li>
+    </ul>
+  </li>
+  <li><a href="./MTConnect">MTConnect</a> 
+    <ul>
+      <li>XML-formatted data of the machine tool output data in accordance with
+        the MTConnect standard v1.3</li>
+      <li>Data conforms to <a
+        href="https://github.com/mtconnect/schema">MTConnect v1.3
+      schemas</a></li>
+    </ul>
+  </li>
+  <li><a href="./NCcode">NC Code</a> 
+    <ul>
+      <li>Machining programs for operations steps for each part in accordance
+        with ISO 6983 (G-code)</li>
+    </ul>
+  </li>
+  <li><a href="./PartData">PartData</a> 
+    <ul>
+      <li>Combined "Split" data organized into data blocks by part instance</li>
+    </ul>
+  </li>
+  <li><a href="./QIF-IncomingInspection">QIF-IncomingInspection</a> 
+    <ul>
+      <li>Receiving / incoming inspection reporting data in QIF 2.1 format</li>
+      <li>Data conforms to <a
+        href="http://qifstandards.org/latest-qif-version/">QIF XSD</a></li>
+      <li>Each file contains data for 20 instances of the same part</li>
+      <li>The MTC in the UK completed inspection</li>
+    </ul>
+  </li>
+  <li><a href="./Raw">Raw</a> 
+    <ul>
+      <li>Raw output from machine tool adapters as recorded on the given date
+        and machine</li>
+    </ul>
+  </li>
+  <li><a href="./Split">Split</a> 
+    <ul>
+      <li>Parsed "Clean" data split into data blocks by operation for each part
+        instance</li>
+    </ul>
+  </li>
+</ul>
 
-<h2>Contacts</h2>
+<h2><a id="Contacts_31"></a>Contacts</h2>
 
-<p><a href="http://www.nist.gov/el/msid/syseng/thedberg.cfm">Thomas Hedberg</a>
-and <a href="http://www.nist.gov/el/msid/infotest/mhelu.cfm">Moneer Helu</a>
-are the Coorindators of the SMS Test Bed.</p>
+<p><a href="https://www.nist.gov/people/thomas-hedberg">Thomas Hedberg</a>.</p>
 
-<p>For general questions, please send an email to <a
-href="mailto:smstestbed@nist.gov">smstestbed@nist.gov</a>.</p>
-
-<h2>Disclaimers</h2>
+<h2><a id="Disclaimers_35"></a>Disclaimers</h2>
 
 <p>The use of any software or hardware by the project does not imply a
 recommendation or endorsement by NIST.</p>
@@ -481,7 +542,7 @@ recommendation or endorsement by NIST.</p>
 <p>The use of the project results in other software or hardware products does
 not imply a recommendation or endorsement by NIST of those products.</p>
 
-<p>We would appreciate acknowledgement if any of the project results are used,
+<p>We would appreciate acknowledgment if any of the project results are used,
 however, the use of the NIST logo is not allowed.</p>
 
 <p>NIST-developed software is provided by NIST as a public service. You may
@@ -530,7 +591,7 @@ copyright protection within the United States.</p>
           NIST E-mail alerts:<br>
           <input onfocus="this.value=''" value="Enter email address"
           name="login" id="login" title="login" type="text"><input
-          value="USNIST" name="code" type="hidden">
+          value="USNIST" name="code" type="hidden"> 
           <input name="signupbutton" id="signupbutton" value="Go"
         type="submit"></form>
       </td>
@@ -554,7 +615,7 @@ Quality Standards</a> / <br>
 <a href="http://www.nist.gov/public_affairs/envpolicy.cfm">Environmental Policy
 Statement</a></p>
 
-<p>Date created: March 17, 2016 | Last updated: September 28, 2016 Contact: <a
+<p>Date created: August 17, 2018 | Last updated: August 17, 2018 Contact: <a
 href="mailto:smstestbed@nist.gov" class="bold">SMS Test Bed Coordinators</a></p>
 </div>
 </body>
