update NC-Code folder name

--- a/tdp/mtc/index.html
+++ b/tdp/mtc/index.html
@@ -496,7 +496,7 @@ result of the collaboration.</p>
       schemas</a></li>
     </ul>
   </li>
-  <li><a href="./NCcode">NC Code</a> 
+  <li><a href="./NC-Code">NC-Code</a> 
     <ul>
       <li>Machining programs for operations steps for each part in accordance
         with ISO 6983 (G-code)</li>
