updated TDP README and webpage

--- a/tdp/mtc/index.html
+++ b/tdp/mtc/index.html
@@ -465,7 +465,7 @@ result of the collaboration.</p>
 
 <h2><a id="Directory_Structure_3"></a>Directory Structure</h2>
 <ul>
-  <li><a href="./Cad">CAD</a> 
+  <li><a href="./CAD">CAD</a> 
     <ul>
       <li>Digital Product Definition, in accordance to ASME Y14.41-2012,
         created using SolidWorks 2016</li>
