Updated MTC TDP zip file location

--- a/tdp/mtc/index.html
+++ b/tdp/mtc/index.html
@@ -461,7 +461,7 @@ manufacturing, and quality assurance through a thorough implementation of a
 small scale model-based enterprise (MBE). This dataset was generated as a
 result of the collaboration.</p>
 
-<p><a href="./mtc.zip">Download the full package @ 237 MB.</a></p>
+<p><a href="https://s3.amazonaws.com/nist-el/mfg_digitalthread/nist-mtc-assembly_tdp.zip">Download the full package @ 237 MB.</a></p>
 
 <h2><a id="Directory_Structure_3"></a>Directory Structure</h2>
 <ul>
