--- a/tdp/index.html
+++ b/tdp/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://pages.nist.gov/nist-header-footer/css/nist-combined.css">
   <script src="https://pages.nist.gov/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
   <script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
+  <!-- DAP Analytics -->
+  <script type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-102226507-7&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
 </head>
 
 <body>
@@ -24,10 +26,6 @@
 
 		<p>Below is an overview with links to the TDPs available in this repository.</p>
 		<pre style="font-family: 'courier new', courier, monospace; font-size: 1em;">    +---<a href="https://smstestbed.nist.gov/tdp/d2mi/">d2mi (Design to Manufacturing and Inspection project)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/CAD/">CAD (Computer-aided design files)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/CAM/">CAM (Computer-aided manufacturing files)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/G-code/">G-code (ISO 6983 G-code related to the CAM and Setup Sheets)</a>
-        +---<a href="https://smstestbed.nist.gov/tdp/d2mi/Setup%20Sheets/">Setup Sheets (Setup Sheets related to the CAM and G-code)</a>
     +---<a href="https://smstestbed.nist.gov/tdp/mtc/">mtc (NIST and The Manufacturing Technology Centre Collaboration project)</a>
     +---<a href="https://smstestbed.nist.gov/tdp/README.md">README.md (this documentation as a markdown document)</a></pre>
 
@@ -35,7 +33,7 @@
 
 		<p><a href="https://www.nist.gov/people/thomas-hedberg">Thomas Hedberg</a>
 		and <a href="https://www.nist.gov/people/moneer-helu">Moneer Helu</a>
-		are the Coorindators of the SMS Test Bed.</p>
+		are the Coordinators of the SMS Test Bed.</p>
 
 		<p>For general questions, please send an email to <a
 		href="mailto:smstestbed@nist.gov">smstestbed@nist.gov</a>.</p>
@@ -79,7 +77,7 @@
 		to property. The software developed by NIST employees is not subject to
 		copyright protection within the United States.</p>
 		
-		<p>Date created: March 17, 2016 | Last updated: October 29, 2018 | Contact: <a href="mailto:smstestbed@nist.gov" class="bold">SMS Test Bed Coordinators</a></p>
+		<p>Date created: March 17, 2016 | Last updated: November 21, 2018 | Contact: <a href="mailto:smstestbed@nist.gov" class="bold">SMS Test Bed Coordinators</a></p>
 	</div>
 </div>
 </body>
