--- a/tdp/mtc/index.html
+++ b/tdp/mtc/index.html
@@ -4,8 +4,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>NIST SMS Test Bed: Technical Data Packages</title>
   <meta name="Description" id="Description" content="Technical Data Pacakages (TDP) for NIST Smart Manufacturing Test Bed. Real manufacturing data available for research and development.">
-  <meta name="Keywords" id="Keywords" content="manufacturing, data, MTConnect, QIF, design">
-  <link rel="stylesheet" href="https://pages.nist.gov/nist-header-footer/css/nist-combined.css">
+  <meta name="Keywords" id="Keywords" content="manufacturing, data, MTConnect, QIF, design" \>
+  <link rel="stylesheet" href="https://pages.nist.gov/nist-header-footer/css/nist-combined.css" \>
   <script src="https://pages.nist.gov/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
   <script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
   <!-- DAP Analytics -->
